src/test/Unimplemented/Unimplemented.expected
error: Unimplemented.panda:15:1: non-abstract class Sub2 does not implement abstract method hello()
error: Unimplemented.panda:15:1: non-abstract class Sub2 does not implement interface method goodbye()
2 errors
