src/test/Unimplemented/Unimplemented.panda
@abstract
class Super {
    @abstract
    method hello()
}

interface Interface {
    method goodbye()
}

@abstract
class Sub : Super (Interface) {
}

class Sub2 : Sub {
}